...
import app.purecipes.shared.ui.theme.PurecipesTheme

internal const val CUISINE_FIELD_TAG = "createRecipeCuisineField"
internal const val DESCRIPTION_FIELD_TAG = "createRecipeDescriptionField"
internal const val TITLE_FIELD_TAG = "createRecipeTitleField"
internal const val TOTAL_TIME_FIELD_TAG = "createRecipeTotalTimeField"
internal const val TOTAL_TIME_ROW_TAG = "createRecipeTotalTimeRow"
internal const val YIELDS_FIELD_TAG = "createRecipeYieldsField"
internal const val YIELDS_ROW_TAG = "createRecipeYieldsRow"

private const val CUISINE_ITEM_INDEX = 0
private const val TOTAL_TIME_ITEM_INDEX = 1
private const val YIELDS_ITEM_INDEX = 2

@Composable
...
