...
				aliases = setOf("teaspoon", "teaspoons", "tsp"),
				system = MeasurementSystem.IMPERIAL,
				dimension = MeasurementDimension.VOLUME,
				toBaseFactor = MILLILITERS_PER_TEASPOON,
			),
			UnitInfo(
				aliases = setOf("ounce", "ounces", "oz"),
				system = MeasurementSystem.IMPERIAL,
				dimension = MeasurementDimension.WEIGHT,
				toBaseFactor = GRAMS_PER_OUNCE,
			),
			UnitInfo(
				aliases = setOf("pound", "pounds", "lb", "lbs"),
...
				aliases = setOf("l", "liter", "liters"),
				system = MeasurementSystem.METRIC,
				dimension = MeasurementDimension.VOLUME,
				toBaseFactor = MILLILITERS_PER_LITER,
			),
			UnitInfo(
				aliases = setOf("ml", "milliliter", "milliliters"),
				system = MeasurementSystem.METRIC,
				dimension = MeasurementDimension.VOLUME,
				toBaseFactor = ONE_DOUBLE,
			),
		)
	}
...
